--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
+plugins {
+	id "com.github.johnrengelman.shadow" version "5.0.0"
+}
+
 apply plugin: 'java'
 apply plugin: 'application'
 
 mainClassName = 'main.java.Menu'
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 version = '1.0'
 
 repositories {
@@ -15,3 +19,11 @@ dependencies {
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     compile 'com.google.apis:google-api-services-sheets:v4-rev516-1.23.0'
 }
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'main.java.Menu',
+                'Class-Path': configurations.compile.collect { it.getName() }.join(' ')	
+	}
+}
+
